# oclabc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_oclabc.sh
core/: CMakeLists.txt
core/include/: cl_runtime.h  log.h  tensor.h  type.h  utils.h
core/src/: cl_runtime.cpp  tensor.cpp  utils.cpp
examples/: CMakeLists.txt  api_example.cpp  deconv_f2s2_nchw.cpp  gflops.cpp
scripts/: adb_server.sh  col2im.py
src/cl/: mat.cl
test/: CMakeLists.txt  main.cpp
